Generator: TemplateModel2.loadTemplate merged into TemplateModel